# ValidusMobileComponent

./: CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  react-native-validus-component-mobile.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/validuscomponentmobile/: ValidusComponentMobileModule.kt  ValidusComponentMobilePackage.kt
cpp/: react-native-validus-component-mobile.cpp  react-native-validus-component-mobile.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: .xcode.env.local  File.swift  Podfile
example/ios/ValidusComponentMobileExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/ValidusComponentMobileExample.xcodeproj/: project.pbxproj
example/ios/ValidusComponentMobileExample.xcworkspace/: contents.xcworkspacedata
example/ios/ValidusComponentMobileExampleTests/: ValidusComponentMobileExampleTests.m
example/src/: App.tsx  styles.ts
ios/: ValidusComponentMobile.h  ValidusComponentMobile.mm
src/: index.tsx
src/components/: AccountSummaryCard.tsx
src/components/constants/: colors.ts  fonts.ts  icons.ts  index.ts
src/components/selectDropdown/: selectDropdown.tsx
src/components/selectDropdown/components/: dropdownModal.tsx  dropdownOverlay.tsx  dropdownWindow.tsx  input.tsx
src/components/selectDropdown/helpers/: calculateDropdownHeight.ts  deepSearchInArr.ts  (+3 more)
src/components/text-input/: index.tsx  styles.ts
(+6 files in other folders)
